update the draft

--- a/refs.bib
+++ b/refs.bib
@@ -27,6 +27,14 @@
   publisher={EDP sciences}
 }
 
+@misc{OhioSupercomputerCenter1987,
+ark = {ark:/19495/f5s1ph73},
+url = {http://osc.edu/ark:/19495/f5s1ph73},
+year  = {1987},
+author = {Ohio Supercomputer Center},
+title = {Ohio Supercomputer Center}
+}
+
 
 @article{rezaie2021primordial,
   title={Primordial non-Gaussianity from the completed SDSS-IV extended Baryon Oscillation Spectroscopic Survey--I: Catalogue preparation and systematic mitigation},
