--- a/sections/acknowledgement.tex
+++ b/sections/acknowledgement.tex
@@ -1,58 +1,4 @@
 \section*{Acknowledgements}
-%We thank the anonymous referee for their insightful comments and suggestions. M.R. is supported by the U.S.~Department of Energy, Office of Science, Office of High Energy Physics under DE-SC0014329; H.-J.S. is supported by the U.S.~Department of Energy, Office of Science, Office of High Energy Physics under DE-SC0014329 and DE-SC0019091. We acknowledge the support and resources from the Ohio Supercomputer Center \citep[OSC;][]{Owens2016}. Specifically, this work utilized more than $359000$ core hours of the Owens cluster. M.R. is grateful for help from Xia Wang, Antonio Marcum, and Yu Feng. G.R. acknowledges support from the National Research Foundation of Korea (NRF) through Grants No. 2017R1E1A1A01077508 and No. 2020R1A2C1005655 funded by the Korean Ministry of Education, Science and Technology (MoEST). We would like to appreciate the open-source software and modules that were invaluable to this research: Pytorch, Nbodykit, HEALPix, Fitsio, Scikit-Learn, NumPy, SciPy, Pandas, IPython, Jupyter, and GitHub.
+MR is supported by XXXXXX. We acknowledge the support and resources from the Ohio Supercomputer Center \citep[OSC;][]{OhioSupercomputerCenter1987}. We would like to thank the open-source software and resources that were beneficial to this research: Pytorch, Nbodykit, HEALPix, Fitsio, Scikit-Learn, NumPy, SciPy, Pandas, IPython, Jupyter, arXiv, and GitHub. 
 
-%Funding for the Sloan Digital Sky 
-%Survey IV has been provided by the 
-%Alfred P. Sloan Foundation, the U.S. 
-%Department of Energy Office of 
-%Science, and the Participating 
-%Institutions. SDSS-IV acknowledges support and 
-%resources from the Center for High 
-%Performance Computing  at the 
-%University of Utah. The SDSS 
-%website is www.sdss.org. This work also relied on resources provided to the eBOSS Collaboration by the National Energy Research Scientific Computing Center (NERSC). NERSC is a U.S. Department of Energy Office of Science User Facility operated under Contract No. DE-AC02-05CH11231.
-% 
-%
-%SDSS-IV is managed by the 
-%Astrophysical Research Consortium 
-%for the Participating Institutions 
-%of the SDSS Collaboration including 
-%the Brazilian Participation Group, 
-%the Carnegie Institution for Science, 
-%Carnegie Mellon University, Center for 
-%Astrophysics | Harvard \& 
-%Smithsonian, the Chilean Participation 
-%Group, the French Participation Group, 
-%Instituto de Astrof\'isica de 
-%Canarias, The Johns Hopkins 
-%University, Kavli Institute for the 
-%Physics and Mathematics of the 
-%Universe (IPMU) / University of 
-%Tokyo, the Korean Participation Group, 
-%Lawrence Berkeley National Laboratory, 
-%Leibniz Institut f\"ur Astrophysik 
-%Potsdam (AIP),  Max-Planck-Institut 
-%f\"ur Astronomie (MPIA Heidelberg), 
-%Max-Planck-Institut f\"ur 
-%Astrophysik (MPA Garching), 
-%Max-Planck-Institut f\"ur 
-%Extraterrestrische Physik (MPE), 
-%National Astronomical Observatories of 
-%China, New Mexico State University, 
-%New York University, University of 
-%Notre Dame, Observat\'ario 
-%Nacional / MCTI, The Ohio State 
-%University, Pennsylvania State 
-%University, Shanghai 
-%Astronomical Observatory, United 
-%Kingdom Participation Group, 
-%Universidad Nacional Aut\'onoma 
-%de M\'exico, University of Arizona, 
-%University of Colorado Boulder, 
-%University of Oxford, University of 
-%Portsmouth, University of Utah, 
-%University of Virginia, University 
-%of Washington, University of 
-%Wisconsin, Vanderbilt University, 
-%and Yale University.
- 
+%We thank the anonymous referee for their insightful comments and suggestions. M.R. is supported by the U.S.~Department of Energy, Office of Science, Office of High Energy Physics under DE-SC0014329; H.-J.S. is supported by the U.S.~Department of Energy, Office of Science, Office of High Energy Physics under DE-SC0014329 and DE-SC0019091. We acknowledge the support and resources from the Ohio Supercomputer Center \citep[OSC;][]{Owens2016}. Specifically, this work utilized more than $359000$ core hours of the Owens cluster. M.R. is grateful for help from Xia Wang, Antonio Marcum, and Yu Feng. G.R. acknowledges support from the National Research Foundation of Korea (NRF) through Grants No. 2017R1E1A1A01077508 and No. 2020R1A2C1005655 funded by the Korean Ministry of Education, Science and Technology (MoEST). We would like to appreciate the open-source software and modules that were invaluable to this research: Pytorch, Nbodykit, HEALPix, Fitsio, Scikit-Learn, NumPy, SciPy, Pandas, IPython, Jupyter, and GitHub.
