--- a/sections/authorlist.tex
+++ b/sections/authorlist.tex
@@ -1,15 +1,8 @@
 % If you need two or more lines of authors, add an extra line using \newauthor
-\author[M. Rezaie et al.]{Mehdi Rezaie$^{1,2}$, Ashley J. Ross$^{3}$, Hee-Jong Seo$^{2}$,  Hui Kong$^{3}$,  Edmond Chaussidon$^{4}$,\newauthor
+\author[M. Rezaie et al.]{Mehdi Rezaie$^{1}$, Ashley J. Ross$^{2}$, Hee-Jong Seo$^{3}$,  Hui Kong$^{3}$,  Edmond Chaussidon$^{4}$,\newauthor
 Anna Porredon$^{3}$, Lado Samushia$^{1}$, Rongpu Zhou$^{5}$, Alex Krolewski$^{6,7,8}$, Arnaud de Mattia$^{4}$,\newauthor
 Jose Bermejo$^{?}$, Florian Beutler$^{9}$, Christophe Yeche$^{4}$, Nathalie Palanque-Delabrouille$^{4,5}$,\newauthor
-  Klaus Honscheid$^{3,10}$, and DESI Builders
-%Will J. Percival$^{4,5,6}$,\newauthor Grant Merz$^{1}$, Reza Katebi$^{1}$, Razvan C. Bunescu$^{7}$,
-%Julian Bautista$^{8}$,
-%Joel R. Brownstein$^{9}$,\newauthor
-%Etienne Burtin$^{10}$, Kyle Dawson$^{9}$, H\'ector Gil-Mar\'in$^{11, 12}$,
-%Jiamin Hou$^{13}$, Eleanor B. Lyke$^{14}$,\newauthor
-%Axel de la Macorra$^{15}$,
-%Graziano Rossi$^{16}$, Donald P. Schneider$^{17,18}$,  Pauline Zarrouk$^{10, 19}$,\newauthor and Gong-Bo Zhao$^{20, 21}$ 
+  Klaus Honscheid$^{2,10}$, and DESI Builders
 \\~\\
 % List of institutions
 $^{1}$Department of Physics, Kansas State University, 116 Cardwell Hall, Manhattan, KS 66506, USA\\
@@ -21,19 +14,5 @@ $^{6}$Department of Physics and Astronomy, University of Waterloo, 200 Universit
 $^{7}$Perimeter Institute for Theoretical Physics, 31 Caroline St. North, Waterloo, ON N2L 2Y5, Canada\\
 $^{8}$Waterloo Centre for Astrophysics, University of Waterloo, 200 University Ave W, Waterloo, ON N2L 3G1, Canada\\
 $^{9}$Institute for Astronomy, University of Edinburgh, Royal Observatory, Blackford Hill, Edinburgh EH9 3HJ, UK\\
-$^{10}$Department of Physics, The Ohio State University, 191 West Woodruff Avenue, Columbus, OH 43210, USA\\
-%$^{8}$Institute of Cosmology \& Gravitation, Dennis Sciama Building, University of Portsmouth, Portsmouth, PO1 3FX, UK \\
-%$^{9}$Department of Physics and Astronomy, University of Utah, 115 S. 1400 E., Salt Lake City, UT 84112, USA\\
-%$^{10}$IRFU,CEA, Universit\'e Paris-Saclay, F-91191 Gif-sur-Yvette, France\\
-%$^{11}$Institut de Ci\`encies del Cosmos, Universitat de Barcelona, ICCUB, Mart\'i i Franqu\`es 1, E08028 Barcelona, Spain\\ 
-%$^{12}$Institut  d'Estudis  Espacials  de  Catalunya  (IEEC),  E08034  Barcelona,  Spain\\ 
-%$^{13}$Max-Planck-Institut f\"ur Extraterrestrische Physik, Postfach 1312, Giessenbachstr., 85748 Garching bei M\"unchen, Germany\\
-%$^{14}$Department of Physics and Astronomy, University of Wyoming, Laramie, WY 82071, USA\\
-%$^{15}$Instituto de Fisica, Universidad Nacional Autonoma de Mexico, Apdo. Postal 20-364, Mexico\\
-%$^{16}$Department of Physics and Astronomy, Sejong University, Seoul 143-747, Korea\\
-%$^{17}$Department of Astronomy and Astrophysics, The Pennsylvania State University, University Park, PA 16802, USA\\
-%$^{18}$Institute for Gravitation and the Cosmos, The Pennsylvania State University, University Park, PA 16802, USA \\ 
-%$^{19}$Institute for Computational Cosmology, Dept. of Physics, University of Durham, South Road, Durham DH1 3LE, UK\\
-%$^{20}$National Astronomy Observatories, Chinese Academy of Science, Beijing, 100101, P.R. China\\
-%$^{21}$School of Astronomy and Space Science, University of Chinese Academy of Sciences, Beijing 100049, P.R.China
+$^{10}$Department of Physics, The Ohio State University, 191 West Woodruff Avenue, Columbus, OH 43210, USA
 }
