--- a/sections/conclusion.tex
+++ b/sections/conclusion.tex
@@ -9,6 +9,8 @@ Various tests are performed to assess the robustness of constraints against anal
 \item region below dec of -30 indicates some issues probably due to unaccounted for calibration issues
 \item constraints are robust against the largest scales (lowest $\ell$ mode) used in fitting for $\fnl$. \mr{Some signs of systematics on $10 < \ell < 18$.}
 \end{itemize}
+
+\clearpage
 %We have performed a thorough study of imaging systematic effects and various template-based mitigation techniques in the final sample of quasars \citep{lyke2020dr16qso, ross2020lss} from the eBOSS DR16 \citep{Ahumada2020ApJS}. We present a nonlinear cleaning approach, based on artificial neural networks, and compare the treatment effectiveness with the standard method, based on linear regression. The methods are applied to model the observed density of quasars given a set of templates for imaging properties, related to SDSS properties and Galactic foregrounds, which include stellar density, Galactic extinction, neutral hydrogen column density, depth, seeing, sky brightness, airmass, and run. As summarized in Tab. \ref{tab:chi2methods},
 %\begin{enumerate}[leftmargin=1\parindent]
 %    \item We find that the neural network-based approach outperforms standard linear regression by allowing more freedom for correcting nonlinear and complex variations in the quasar density caused by imaging properties, see Fig. \ref{fig:nbarmethods} and \ref{fig:data_nbar}. The approach is also further improved by using the Poisson statistics to account for the sparsity of the DR16 sample.
